# quantum-sdk

./: .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  cspell.json  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
qpiai_quantum/: __init__.py  config.py
qpiai_quantum/adapters/: quantum_app_adapter.py
qpiai_quantum/algorithms/: README.md  __init__.py  amplitude_estimation.py  base.py  bernstein_vazirani.py  deutsch_jozsa.py  grover.py  phase_estimation.py  qrng.py  shor.py  simon.py
qpiai_quantum/algorithms/opt/: __init__.py
qpiai_quantum/algorithms/opt/ansatz/: __init__.py  custom.py  hardware_efficient.py  standard.py
qpiai_quantum/algorithms/opt/problems/: __init__.py  base.py  optimization.py
qpiai_quantum/algorithms/opt/solvers/: __init__.py  qaoa.py  vqe.py
qpiai_quantum/algorithms/utils/: __init__.py
qpiai_quantum/algorithms/utils/encoders/: amplitude.py  angle.py  basis.py
qpiai_quantum/algorithms/utils/optimizers/: __init__.py  gradient_based.py  gradient_free.py
qpiai_quantum/algorithms/utils/visualize/: __init__.py  visualise.py  visualize.py
qpiai_quantum/applications/: __init__.py
qpiai_quantum/applications/chemistry/: __init__.py  drivers.py  mappers.py  uccsd.py
qpiai_quantum/applications/matter/: __init__.py  ansatz.py  lattices.py  models.py  qite.py
qpiai_quantum/applications/optimization/: __init__.py  problems.py
qpiai_quantum/authentication/: auth.py
qpiai_quantum/circuit/: circuit.py  random_circuit_generator.py
qpiai_quantum/circuitmanager/: circuit_manager.py
qpiai_quantum/formalism/density_matrix/: base_density_matrix.py  density_matrix.py  states.py
qpiai_quantum/icr/: __init__.py  circuitoperation.py  icr.py
qpiai_quantum/iem/: __init__.py
qpiai_quantum/iem/qasm/v2/: exporter.py
qpiai_quantum/jobmanager/: backend.py  execution_engine.py  job_result.py  jobmanager.py  sse_handler.py
qpiai_quantum/quantum_info/: density_matrix.py  statevector.py
qpiai_quantum/results/: base_result.py
qpiai_quantum/simulator/: base_simulator.py  gates.py  result.py  statevector.py
qpiai_quantum/state_preparation/: bell_state.py  cluster_state.py  ghz_state.py  w_state.py
qpiai_quantum/visualization/matplotlib_visualizer/: plotter.py  visualizer.py
qpiai_quantum/visualization/plotly_visualizer/: plotter.py  visualizer.py
qpiai_quantum/visualization/q_sphere/: bloch_sphere_plotly.py
sdk_notebooks/: 02_bell_state.ipynb  03_ghz_state.ipynb  04_w_state.ipynb  05_deutsch_jozsa.ipynb  06_bernstein_vazirani.ipynb  07_simon.ipynb  08_grover.ipynb  09_shor.ipynb  10_qft.ipynb  11_qpe.ipynb  12_density_matrices.ipynb  13_maxcut_vqe.ipynb  14_portfolio_qaoa.ipynb  15_drug_binding_energy_vqe.ipynb  16_materials_fermi_hubbard_hva.ipynb
tests/: test_chemistry.py  test_circuit_operations.py  test_cluster_state.py  test_http_timeouts.py  test_jobmanager_wait.py  test_matter.py  test_optimization_migration.py  test_statevector.py
tests/algorithms/: test_algorithm_standardization.py  test_amplitude_estimation.py  test_bernstein_vazirani.py  test_deutsch_jozsa.py  test_grover.py  test_optimizers.py  test_phase_estimation.py  test_qaoa.py  test_qft.py  test_qrng.py  test_shor.py  test_simon.py  test_vqe.py  test_vqe_xy_terms.py
